# omni

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
FunctionLibrary/: Omni.efxj
src/: args.rs  bitwarden.rs  epicor.rs  main.rs  setup.rs
