[package]
name = "omni"
author = "Eli Whalen <eliwhalen92@gmail.com>"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figlet-rs = "0.1.5"
rand = "0.8.5"
dotenv = "0.15.0"
anyhow = "1.0.71"
clap = {version = "4.3.0", features = ["cargo", "derive"]}
regex = "1.8.3"
zip = "0.6.6"
reqwest = {version= "0.11.18", features = ["blocking", "json"]}
tempfile = "3.5.0"
base64 = "0.21.2"
tokio = { version = "1", features = ["full"] }
serde = {cersion="1.0.163", features=["derive"]}
serde_derive = "1.0.163"
serde_json = "1.0.96"
chrono = "0.4.25"
colored = "2.0.0"
